[gd_scene format=3 uid="uid://comeyp103ci14"]

[ext_resource type="Script" uid="uid://cqs0fw04i353c" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://comor5ekwua50" path="res://ball.gd" id="2_0xm2m"]
[ext_resource type="PhysicsMaterial" uid="uid://chxig6vtldm8i" path="res://ball.tres" id="2_7mycd"]
[ext_resource type="Script" uid="uid://bvigvjg3qqj3h" path="res://shoot_line.gd" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://bvjsktncikt31" path="res://dome.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://bpaxx4tn7mr6j" path="res://table.tscn" id="4_1bvp3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7dm0k"]
margin = 0.0
radius = 2.85

[sub_resource type="Gradient" id="Gradient_h2yge"]
offsets = PackedFloat32Array(0, 0.9932584)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1bvp3"]
gradient = SubResource("Gradient_h2yge")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(1, 0.9263333, 0.87, 1)
albedo_texture = SubResource("GradientTexture2D_1bvp3")

[sub_resource type="SphereMesh" id="SphereMesh_7dm0k"]
lightmap_size_hint = Vector2i(33, 17)
material = SubResource("StandardMaterial3D_h2yge")
radius = 2.85
height = 5.7

[sub_resource type="LabelSettings" id="LabelSettings_h2yge"]
font_size = 18

[node name="Main" type="Node3D" unique_id=1362962675]
script = ExtResource("1_ig7tw")

[node name="CueBall" type="RigidBody3D" parent="." unique_id=1587648222]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56, 2.85, 0)
physics_material_override = ExtResource("2_7mycd")
linear_damp_mode = 1
angular_damp_mode = 1
script = ExtResource("2_0xm2m")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CueBall" unique_id=1601161265]
shape = SubResource("SphereShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CueBall" unique_id=1590091616]
mesh = SubResource("SphereMesh_7dm0k")

[node name="CameraPivot" type="Node3D" parent="." unique_id=1177074352]
transform = Transform3D(1, 0, 0, 0, -4.3711385e-08, 0.9999999, 0, -0.9999999, -4.3711385e-08, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot" unique_id=142044440]
transform = Transform3D(1, 0, 0, 0, 1.0000001, -1.0658141e-14, 0, 1.0658141e-14, 1.0000001, 0, -3.6527392e-06, 118.564926)
size = 50.0

[node name="Light" type="DirectionalLight3D" parent="." unique_id=1196470335]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 26.1799, 0)
shadow_enabled = true

[node name="Dome" parent="." unique_id=1266447434 instance=ExtResource("3_lquwl")]

[node name="Control" type="Control" parent="." unique_id=386163020]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShootLine" type="Line2D" parent="Control" unique_id=365693871]
points = PackedVector2Array(-18, 19, -23, 65)
width = 5.0
default_color = Color(0.45840502, 0.45840508, 0.45840502, 0.5294118)
script = ExtResource("3_h2yge")

[node name="TickLabel" type="Label" parent="Control" unique_id=287979515]
layout_mode = 1
offset_left = 17.0
offset_top = 11.0
offset_right = 164.0
offset_bottom = 84.0
label_settings = SubResource("LabelSettings_h2yge")

[node name="Table" parent="." unique_id=333268487 instance=ExtResource("4_1bvp3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.10971069, -15.336487, -0.08026123)

[connection signal="new_turn" from="." to="Control/ShootLine" method="_on_main_new_turn"]
